# cookie_clicker_bot

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: cookie_clicker.py
