[tool.poetry]
name = "cookie-clicker-bot"
version = "0.1.0"
description = "Bot to play the cookie clicker game."
authors = ["Alexey Danilov <a7exdanilov@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"

[tool.ruff]
line-length = 79
show-source = true
update-check = true

[tool.ruff.isort]
known-first-party = ["src", "tests"]

[tool.black]
line-length = 79

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
